--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "next": "12.1.6",
     "node-fetch": "^3.2.4",
-    "poppyio": "https://js.poppy.io/0.0.6/poppyio-0.0.6.tgz",
+    "poppyio": "^0.1.0",
     "raw-body": "^2.5.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
